[gd_scene load_steps=15 format=2]

[ext_resource path="res://graphics/environment_tiles.tres" type="TileSet" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://graphics/dragon.png" type="Texture" id=3]
[ext_resource path="res://graphics/flame.png" type="Texture" id=4]
[ext_resource path="res://Cracker.gd" type="Script" id=5]
[ext_resource path="res://Graphics/grahamChoc.png" type="Texture" id=6]
[ext_resource path="res://Spawn.gd" type="Script" id=7]
[ext_resource path="res://CampfiresLeft.gd" type="Script" id=8]
[ext_resource path="res://EnemiesLeft.gd" type="Script" id=9]
[ext_resource path="res://Graphics/you_lose.png" type="Texture" id=10]
[ext_resource path="res://Graphics/you_win.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 14.9518

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Main" type="Node"]

[node name="environment_bg" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
tile_data = PoolIntArray( -262153, 48, -262152, 48, -262151, 48, -262150, 48, -262149, 48, -262148, 48, -262147, 48, -262146, 48, -262145, 48, -327680, 48, -327679, 48, -327678, 48, -327677, 48, -327676, 48, -327675, 48, -327674, 48, -327673, 48, -327672, 48, -327671, 48, -327670, 48, -327669, 48, -327668, 48, -327667, 48, -327666, 48, -327665, 48, -327664, 48, -327663, 48, -327662, 48, -327661, 48, -327660, 48, -327659, 48, -327658, 48, -327657, 48, -327656, 48, -327655, 48, -327654, 48, -327653, 48, -327652, 48, -196617, 48, -196616, 48, -196615, 48, -196614, 48, -196613, 48, -196612, 48, -196611, 48, -196610, 48, -196609, 48, -262144, 48, -262143, 48, -262142, 48, -262141, 48, -262140, 48, -262139, 48, -262138, 48, -262137, 48, -262136, 48, -262135, 48, -262134, 48, -262133, 48, -262132, 48, -262131, 48, -262130, 48, -262129, 48, -262128, 48, -262127, 48, -262126, 48, -262125, 48, -262124, 48, -262123, 48, -262122, 48, -262121, 48, -262120, 48, -262119, 48, -262118, 48, -262117, 48, -262116, 48, -131081, 48, -131080, 48, -131079, 48, -131078, 48, -131077, 48, -131076, 48, -131075, 48, -131074, 48, -131073, 48, -196608, 48, -196607, 48, -196606, 48, -196605, 48, -196604, 48, -196603, 48, -196602, 48, -196601, 48, -196600, 48, -196599, 48, -196598, 48, -196597, 48, -196596, 48, -196595, 48, -196594, 48, -196593, 48, -196592, 48, -196591, 48, -196590, 48, -196589, 48, -196588, 48, -196587, 48, -196586, 48, -196585, 48, -196584, 48, -196583, 48, -196582, 48, -196581, 48, -196580, 48, -65545, 48, -65544, 48, -65543, 48, -65542, 48, -65541, 48, -65540, 48, -65539, 48, -65538, 48, -65537, 48, -131072, 48, -131071, 48, -131070, 48, -131069, 48, -131068, 48, -131067, 48, -131066, 48, -131065, 48, -131064, 48, -131063, 48, -131062, 48, -131061, 48, -131060, 48, -131059, 48, -131058, 48, -131057, 48, -131056, 48, -131055, 48, -131054, 48, -131053, 48, -131052, 48, -131051, 48, -131050, 48, -131049, 48, -131048, 48, -131047, 48, -131046, 48, -131045, 48, -131044, 48, -9, 48, -8, 48, -7, 48, -6, 48, -5, 48, -4, 48, -3, 48, -2, 48, -1, 48, -65536, 48, -65535, 48, -65534, 48, -65533, 48, -65532, 48, -65531, 48, -65530, 48, -65529, 48, -65528, 48, -65527, 48, -65526, 48, -65525, 48, -65524, 48, -65523, 48, -65522, 48, -65521, 48, -65520, 48, -65519, 48, -65518, 48, -65517, 48, -65516, 48, -65515, 48, -65514, 48, -65513, 48, -65512, 48, -65511, 48, -65510, 48, -65509, 48, -65508, 48, 65527, 48, 65528, 48, 65529, 48, 65530, 48, 65531, 48, 65532, 48, 65533, 48, 65534, 48, 65535, 48, 0, 48, 1, 48, 2, 48, 3, 48, 4, 48, 5, 48, 6, 48, 7, 48, 8, 48, 9, 48, 10, 48, 11, 48, 12, 48, 13, 48, 14, 48, 15, 48, 16, 48, 17, 48, 18, 48, 19, 48, 20, 48, 21, 48, 22, 48, 23, 48, 24, 48, 25, 48, 26, 48, 27, 48, 28, 48, 131063, 48, 131064, 48, 131065, 48, 131066, 48, 131067, 48, 131068, 48, 131069, 48, 131070, 48, 131071, 48, 65536, 48, 65537, 48, 65538, 48, 65539, 48, 65540, 1, 65541, 37, 65542, 65, 65543, 48, 65544, 48, 65545, 48, 65546, 48, 65547, 48, 65548, 48, 65549, 48, 65550, 48, 65551, 48, 65552, 48, 65553, 48, 65554, 48, 65555, 48, 65556, 48, 65557, 48, 65558, 48, 65559, 48, 65560, 48, 65561, 48, 65562, 48, 65563, 48, 65564, 48, 196599, 48, 196600, 48, 196601, 48, 196602, 48, 196603, 48, 196604, 48, 196605, 48, 196606, 48, 196607, 48, 131072, 48, 131073, 48, 131074, 48, 131075, 48, 131076, 13, 131077, 49, 131078, 79, 131079, 48, 131080, 48, 131081, 48, 131082, 48, 131083, 48, 131084, 48, 131085, 48, 131086, 48, 131087, 48, 131088, 48, 131089, 48, 131090, 48, 131091, 48, 131092, 48, 131093, 48, 131094, 48, 131095, 48, 131096, 48, 131097, 48, 131098, 48, 131099, 48, 131100, 48, 262135, 48, 262136, 48, 262137, 48, 262138, 48, 262139, 48, 262140, 48, 262141, 48, 262142, 48, 262143, 48, 196608, 48, 196609, 48, 196610, 48, 196611, 48, 196612, 13, 196613, 49, 196614, 79, 196615, 48, 196616, 48, 196617, 48, 196618, 48, 196619, 48, 196620, 48, 196621, 48, 196622, 48, 196623, 48, 196624, 48, 196625, 48, 196626, 48, 196627, 48, 196628, 48, 196629, 48, 196630, 48, 196631, 48, 196632, 48, 196633, 48, 196634, 48, 196635, 48, 196636, 48, 327671, 48, 327672, 48, 327673, 48, 327674, 48, 327675, 48, 327676, 48, 327677, 48, 327678, 48, 327679, 48, 262144, 48, 262145, 48, 262146, 48, 262147, 48, 262148, 13, 262149, 49, 262150, 79, 262151, 48, 262152, 48, 262153, 48, 262154, 48, 262155, 48, 262156, 48, 262157, 48, 262158, 48, 262159, 48, 262160, 48, 262161, 48, 262162, 48, 262163, 48, 262164, 48, 262165, 48, 262166, 48, 262167, 48, 262168, 48, 262169, 48, 262170, 48, 262171, 48, 262172, 48, 393207, 48, 393208, 48, 393209, 48, 393210, 48, 393211, 48, 393212, 48, 393213, 48, 393214, 48, 393215, 48, 327680, 48, 327681, 48, 327682, 48, 327683, 48, 327684, 13, 327685, 49, 327686, 179, 327687, 37, 327688, 37, 327689, 37, 327690, 37, 327691, 37, 327692, 37, 327693, 65, 327694, 48, 327695, 48, 327696, 48, 327697, 48, 327698, 48, 327699, 48, 327700, 48, 327701, 48, 327702, 48, 327703, 48, 327704, 48, 327705, 48, 327706, 48, 327707, 48, 327708, 48, 458743, 48, 458744, 48, 458745, 48, 458746, 48, 458747, 48, 458748, 48, 458749, 48, 458750, 48, 458751, 48, 393216, 48, 393217, 48, 393218, 48, 393219, 48, 393220, 13, 393221, 49, 393222, 49, 393223, 49, 393224, 49, 393225, 49, 393226, 49, 393227, 49, 393228, 49, 393229, 79, 393230, 48, 393231, 48, 393232, 48, 393233, 48, 393234, 48, 393235, 48, 393236, 48, 393237, 48, 393238, 48, 393239, 48, 393240, 48, 393241, 48, 393242, 48, 393243, 48, 393244, 48, 524279, 48, 524280, 48, 524281, 48, 524282, 48, 524283, 48, 524284, 48, 524285, 48, 524286, 48, 524287, 48, 458752, 48, 458753, 48, 458754, 48, 458755, 48, 458756, 25, 458757, 53, 458758, 53, 458759, 53, 458760, 53, 458761, 53, 458762, 53, 458763, 177, 458764, 49, 458765, 79, 458766, 48, 458767, 48, 458768, 48, 458769, 48, 458770, 48, 458771, 48, 458772, 48, 458773, 48, 458774, 48, 458775, 48, 458776, 48, 458777, 48, 458778, 48, 458779, 48, 458780, 48, 589815, 48, 589816, 48, 589817, 48, 589818, 48, 589819, 48, 589820, 48, 589821, 48, 589822, 48, 589823, 48, 524288, 48, 524289, 48, 524290, 48, 524291, 48, 524292, 48, 524293, 48, 524294, 48, 524295, 48, 524296, 48, 524297, 48, 524298, 48, 524299, 13, 524300, 49, 524301, 79, 524302, 48, 524303, 48, 524304, 48, 524305, 48, 524306, 48, 524307, 48, 524308, 48, 524309, 48, 524310, 48, 524311, 48, 524312, 48, 524313, 48, 524314, 48, 524315, 48, 524316, 48, 655351, 48, 655352, 48, 655353, 48, 655354, 48, 655355, 48, 655356, 48, 655357, 48, 655358, 48, 655359, 48, 589824, 48, 589825, 48, 589826, 48, 589827, 48, 589828, 48, 589829, 48, 589830, 48, 589831, 48, 589832, 48, 589833, 48, 589834, 48, 589835, 13, 589836, 49, 589837, 79, 589838, 48, 589839, 48, 589840, 48, 589841, 48, 589842, 48, 589843, 48, 589844, 48, 589845, 48, 589846, 48, 589847, 48, 589848, 48, 589849, 48, 589850, 48, 589851, 48, 589852, 48, 720887, 48, 720888, 48, 720889, 48, 720890, 48, 720891, 48, 720892, 48, 720893, 48, 720894, 48, 720895, 48, 655360, 48, 655361, 48, 655362, 48, 655363, 48, 655364, 48, 655365, 48, 655366, 48, 655367, 48, 655368, 48, 655369, 48, 655370, 48, 655371, 13, 655372, 49, 655373, 79, 655374, 48, 655375, 48, 655376, 48, 655377, 48, 655378, 48, 655379, 48, 655380, 48, 655381, 48, 655382, 48, 655383, 48, 655384, 48, 655385, 48, 655386, 48, 655387, 48, 655388, 48, 786423, 48, 786424, 48, 786425, 48, 786426, 48, 786427, 48, 786428, 48, 786429, 48, 786430, 48, 786431, 48, 720896, 48, 720897, 48, 720898, 48, 720899, 48, 720900, 48, 720901, 48, 720902, 48, 720903, 48, 720904, 48, 720905, 48, 720906, 48, 720907, 13, 720908, 49, 720909, 79, 720910, 48, 720911, 48, 720912, 48, 720913, 48, 720914, 48, 720915, 48, 720916, 48, 720917, 48, 720918, 48, 720919, 48, 720920, 48, 720921, 48, 720922, 48, 720923, 48, 720924, 48, 851959, 48, 851960, 48, 851961, 48, 851962, 48, 851963, 48, 851964, 48, 851965, 48, 851966, 48, 851967, 48, 786432, 48, 786433, 48, 786434, 48, 786435, 48, 786436, 48, 786437, 48, 786438, 48, 786439, 48, 786440, 48, 786441, 48, 786442, 48, 786443, 13, 786444, 49, 786445, 79, 786446, 48, 786447, 48, 786448, 48, 786449, 48, 786450, 48, 786451, 48, 786452, 48, 786453, 48, 786454, 48, 786455, 48, 786456, 48, 786457, 48, 786458, 48, 786459, 48, 786460, 48, 917495, 48, 917496, 48, 917497, 48, 917498, 48, 917499, 48, 917500, 48, 917501, 48, 917502, 48, 917503, 48, 851968, 48, 851969, 48, 851970, 48, 851971, 48, 851972, 48, 851973, 48, 851974, 48, 851975, 48, 851976, 48, 851977, 48, 851978, 48, 851979, 13, 851980, 49, 851981, 79, 851982, 48, 851983, 48, 851984, 48, 851985, 48, 851986, 48, 851987, 48, 851988, 48, 851989, 48, 851990, 48, 851991, 48, 851992, 48, 851993, 48, 851994, 48, 851995, 48, 851996, 48, 983031, 48, 983032, 48, 983033, 48, 983034, 48, 983035, 48, 983036, 48, 983037, 48, 983038, 48, 983039, 48, 917504, 48, 917505, 48, 917506, 48, 917507, 48, 917508, 48, 917509, 48, 917510, 48, 917511, 48, 917512, 48, 917513, 48, 917514, 48, 917515, 13, 917516, 49, 917517, 79, 917518, 48, 917519, 48, 917520, 48, 917521, 48, 917522, 48, 917523, 48, 917524, 48, 917525, 48, 917526, 48, 917527, 48, 917528, 48, 917529, 48, 917530, 48, 917531, 48, 917532, 48, 1048567, 48, 1048568, 48, 1048569, 48, 1048570, 48, 1048571, 48, 1048572, 48, 1048573, 48, 1048574, 48, 1048575, 48, 983040, 48, 983041, 48, 983042, 48, 983043, 48, 983044, 48, 983045, 48, 983046, 48, 983047, 48, 983048, 48, 983049, 48, 983050, 48, 983051, 13, 983052, 49, 983053, 79, 983054, 48, 983055, 48, 983056, 48, 983057, 48, 983058, 48, 983059, 48, 983060, 48, 983061, 48, 983062, 48, 983063, 48, 983064, 48, 983065, 48, 983066, 48, 983067, 48, 983068, 48 )
_sections_unfolded = [ "Cell" ]
__meta__ = {
"_edit_lock_": true
}

[node name="set_decoration" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
tile_data = PoolIntArray( -327665, 133, -196609, 134, -262140, 133, -262138, 132, -262135, 132, -262133, 134, -262124, 132, -262117, 134, -131076, 132, -131074, 132, -196597, 132, -196592, 134, -196587, 134, -65543, 134, -131070, 132, -131065, 134, -131055, 132, -131049, 132, -131047, 133, -6, 132, -1, 128, -65536, 128, -65535, 128, -65534, 128, -65533, 128, -65532, 128, -65531, 128, -65530, 128, -65529, 128, -65528, 128, -65527, 128, -65526, 128, -65525, 128, -65524, 128, -65523, 128, -65522, 128, -65521, 128, -65520, 128, -65519, 128, -65518, 128, -65517, 128, -65516, 128, 65528, 133, 65535, 128, 7, 132, 11, 134, 20, 128, 26, 134, 131069, 133, 131071, 128, 65545, 132, 65551, 132, 65556, 128, 65563, 132, 196603, 134, 196607, 128, 131073, 132, 131084, 132, 131090, 134, 131092, 128, 131094, 132, 262137, 132, 262140, 132, 262143, 128, 196624, 132, 196628, 128, 327679, 128, 262145, 132, 262164, 128, 262168, 134, 393208, 132, 393215, 128, 327700, 128, 327708, 133, 458747, 134, 458751, 128, 393216, 134, 393235, 132, 393236, 128, 393238, 132, 393242, 132, 524287, 128, 458754, 132, 458772, 128, 589821, 132, 589823, 128, 524305, 132, 524308, 128, 524315, 134, 655353, 133, 655359, 128, 589828, 132, 589844, 128, 589848, 132, 720895, 128, 655361, 132, 655365, 134, 655368, 132, 655370, 132, 655375, 132, 655377, 134, 655380, 128, 786431, 128, 720896, 128, 720897, 128, 720898, 128, 720899, 128, 720900, 128, 720901, 128, 720902, 128, 720903, 128, 720904, 128, 720905, 128, 720906, 128, 720907, 128, 720908, 128, 720909, 128, 720910, 128, 720911, 128, 720912, 128, 720913, 128, 720914, 128, 720915, 128, 720916, 128, 720918, 134, 720923, 132, 851962, 134, 851966, 134, 786432, 132, 786437, 132, 851977, 132, 851978, 134, 851985, 132, 851988, 134, 851992, 132, 851994, 134, 983032, 134, 983036, 132, 917506, 132, 917509, 134, 917518, 132, 917527, 133, 983040, 133, 983048, 132, 983055, 133, 983060, 132 )
_sections_unfolded = [ "Transform" ]

[node name="Player" type="KinematicBody2D" parent="."]

editor/display_folded = true
position = Vector2( 587.148, 577.394 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="DragonSprite" type="Sprite" parent="Player"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]

visible = false
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Player"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Flame" type="Area2D" parent="Player" groups=[
"Fire",
]]

editor/display_folded = true
position = Vector2( 33.6038, -0.0198364 )
scale = Vector2( 0.425767, 0.425767 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="FlameSprite" type="Sprite" parent="Player/Flame"]

position = Vector2( -1.41809, 0.0465698 )
scale = Vector2( 2.3487, 2.3487 )
texture = ExtResource( 4 )
vframes = 2
_sections_unfolded = [ "Animation", "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Flame"]

visible = false
position = Vector2( 1.93248, 3.68254 )
scale = Vector2( 3.10229, 1.47359 )
shape = SubResource( 5 )

[node name="GrahamCracker" type="Area2D" parent="." groups=[
"Cracker",
]]

editor/display_folded = true
position = Vector2( 352.014, 55.7142 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="GrahamCrackerSprite" type="Sprite" parent="GrahamCracker"]

texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrahamCracker"]

visible = false
position = Vector2( 0, 70.7041 )
scale = Vector2( 4.00693, 2.65207 )
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Spawn" type="Position2D" parent="."]

script = ExtResource( 7 )

[node name="MarshmallowSpawnTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true

[node name="ChocolateSpawnTimer" type="Timer" parent="."]

process_mode = 1
wait_time = 8.0
one_shot = false
autostart = true

[node name="CampfiresLeft" type="Label" parent="."]

margin_left = 17.0
margin_top = 14.0
margin_right = 129.0
margin_bottom = 32.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Campfires Left: 4"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 8 )
_sections_unfolded = [ "Rect" ]

[node name="EnemiesLeft" type="Label" parent="."]

margin_left = 16.0
margin_top = 52.0
margin_right = 122.0
margin_bottom = 71.0
rect_scale = Vector2( 2.5, 2.5 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Enemies Left: 8"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 9 )
_sections_unfolded = [ "Rect" ]

[node name="LoseScreen" type="Sprite" parent="."]

visible = false
position = Vector2( -234.352, 129.714 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="WinScreen" type="Sprite" parent="."]

visible = false
position = Vector2( -351.925, 366.366 )
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform" ]

[connection signal="area_entered" from="GrahamCracker" to="GrahamCracker" method="_on_GrahamCracker_area_entered"]

[connection signal="timeout" from="MarshmallowSpawnTimer" to="Spawn" method="_on_MarshmallowSpawnTimer_timeout"]

[connection signal="timeout" from="ChocolateSpawnTimer" to="Spawn" method="_on_ChocolateSpawnTimer_timeout"]


